FLY-2557 UAT_SDK_In Full page Result Screen, UI of pages, data for "Carousel" template is not displayed in proper format issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -588,7 +588,8 @@ body::-webkit-scrollbar {
   margin: 4px;
 }
 .sdk-top-down-interface .full-results-data-container .tile_with_header.grid_view_template .tile-title {
-  width: 19%;
+  width: auto;
+  /* width: 19%; */
 }
 
 
