--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -250,7 +250,7 @@
                     <div id="accordion">
                         <div class="card-acc">
                           <div class="card-header-acc" *ngIf="log.action != 'restored' && log.target">
-                            <a class="card-link-acc link-block" data-toggle="collapse" href="#collapse_log_{{i}}" *ngIf="log.target.contentInfo._source"> {{log.displayMessage }} - {{ log.target.contentInfo._source.contentType}}</a>
+                            <a class="card-link-acc link-block" data-toggle="collapse" href="#collapse_log_{{i}}" *ngIf="log.target.contentInfo._source"> {{log.displayMessage }} - {{ log.target.contentType}}</a>
                             <a class="card-link-acc link-block" data-toggle="collapse" href="#collapse_log_{{i}}" *ngIf="log.target.contentType && log.target.contentType == 'task'"> {{log.displayMessage }} - {{ log.target.contentType}}</a>
                           </div>
                           <div class="card-header-acc" *ngIf="log.action == 'restored'">
