Added manually Result Ranking

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -1159,6 +1159,9 @@
                         flex-wrap: wrap;
                         padding-left: 18px;
                         margin-top: 12px;
+                        .manual{
+                            color: #EFF0F1 !important;
+                        }
                         .pinned{
                             background: #E7F1FF;
                             border-radius: 4px;
