Added manually Result Ranking CSS

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -1160,7 +1160,8 @@
                         padding-left: 18px;
                         margin-top: 12px;
                         .manual{
-                            color: #EFF0F1 !important;
+                            background: #9098a0 !important;
+                            color: #5F6368 !important;
                         }
                         .pinned{
                             background: #E7F1FF;
