FLY-2529 and FLY-2471 FLY-1537 issues fixed

--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -494,7 +494,7 @@
                         box-shadow: none;
                         width: 325px;
                         max-height: 428px;
-                        margin-left: -180px;
+                        left: -290px;
                         padding: 0;
                         border: 0;
                         .notification-dropdown-status{
