--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -120,7 +120,7 @@
                       </div>
                     </div>
                     <div class="filter-up-down" (click)="sortApp('Icon filter', 'down')" *ngIf ="!minToMax"><img   src="assets/icons/dashboard/filter.svg"></div>
-                    <div class="filter-up-down" (click)="sortApp('Icon filter', 'up')" *ngIf ="minToMax"><img  src="assets/icons/dashboard/maxFilter.svg"></div>
+                    <div class="filter-up-down active-down" (click)="sortApp('Icon filter', 'up')" *ngIf ="minToMax"><img  src="assets/icons/dashboard/maxFilter.svg"></div>
                   </div>                   
               </div>
               
