--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -684,7 +684,7 @@
         line-height: 14px;
     }
     .accordion-content-info{ 
-        margin-right: 30px;    
+        // margin-right: 30px;    
         .table-list-content{
             .kr-sg-data-table{
                 .table-content {
@@ -1117,10 +1117,10 @@
         border-width: 0 2px 2px 0;
     }
     .scroll-table{
-        height: calc(100vh - 250px);
+        height: calc(100vh - 240px);
     }
     .scroll-table-allowRow{
-        height: calc(100vh - 250px);
+        height: calc(100vh - 230px);
     }
     .scroll-table-sourceContent{
         height: calc(100vh - 180px);
@@ -1429,4 +1429,40 @@
    
         .kr-sg-input-text-area textarea.desc-text-area{
             min-height: inherit !important;
+        }
+
+        .info-no-limit{
+            background: #FFFBEA;            
+            border: 1px solid #806D16;
+            box-sizing: border-box;
+            border-radius: 4px;
+            display: flex;
+            align-content: center;
+            padding: 9px 10px;                        
+            img{
+
+            }
+            span{
+                color: #806D16;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 18px;
+                padding-left: 10px;
+            }
+        }
+
+        .empty-page-data-container{
+            width: 240px;
+            margin: 0 auto;
+            text-align: center;
+            .title{
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 25px;
+                color: #3C4043;
+                span{
+                    color: #0D6EFD;
+                    cursor: pointer;
+                }
+            }
         }
