content source and schedule ui and invalid api calling issues fixed code changes

--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -123,7 +123,7 @@
           </div>
           <div class="repeat-on">
             <div>
-              <span>On</span>
+              <span>Repeat On</span>
             </div>
             <div class="" *ngIf = "custFreq == 'Weeks' || custFreq == 'Week' ||  custFreq == 'weeks'"> 
               <div class="circle cs" [ngClass] = "{'active' : weeKDay == 'SUN'}" (click)="custweeKday('SUN')">S</div>
