console errors fixed

--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -102,6 +102,8 @@
                         <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
                       </mat-chip>
                       <input maxlength="60"
+                        type="email"
+                        name="email"
                         id="teamInput"
                         placeholder="Type Email and Enter"
                         #fruitInput
