--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -85,8 +85,8 @@
                 </div>
               </div>
               
-              <div class="cards-content" (click)="openApp(app)" *ngFor="let app of recentApps | filter: [ searchApp, 'name']">
-                <div class="box">                
+              <div class="cards-content" (click)="app.disabled?null:openApp(app)" *ngFor="let app of recentApps | filter: [ searchApp, 'name']" placement="top-center" [ngbTooltip]="app.disableReason" [container]='"body"' tooltipClass="metrics_tooltips m-0">
+                <div class="box" [ngStyle]="app.disabled&&{'opacity':'0.4','cursor':'default'}">                
                   <div class="content-sec">
                     <div class="name"><span>{{app.name}}</span></div>
                     <div class="info-text" *ngIf="app.description !==''">{{app.description}}</div>
