--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -40,7 +40,10 @@
 
             <div class="col-6 current-plan usage-plan">
               <div class="inner-content">
-                <div class="title">{{"plan.usage"| translate}}</div>
+                <div class="title-head">
+                  <div class="title">{{"plan.usage"| translate}}</div>
+                  <div class="title-overage" (click)="currentSubscriptionPlan?.subscription?.planName!='Free'?addOverage():null" *ngIf="usageDetails?.searchQueries?.percentageUsed >= 80||usageDetails?.ingestDocs?.percentageUsed >= 80"><img width="12" height="12" src="assets/icons/plus-blue.svg" /> {{"plan.add_overage"| translate}}</div>
+                </div>                
                 <div class="queries">
                   <div class="queries-title">{{"plan.queries"| translate}}</div>
                   <div class="queries-count"><span class="">{{(usageDetails.searchQueries?.used)| valueFormat}}</span> / {{(usageDetails.searchQueries?.limit)|valueFormat}}</div>
