content align ment issue fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -676,7 +676,7 @@
 
               <!-- Cookies -->
               <div class="row m-0">                 
-                  <div class="col-1"></div>
+                  <!-- <div class="col-1"></div> -->
                   <div class="col-11 p-0 group-checkbox">
                     <div class="pl-0 kr-sg-checkbox">
                       <input id="checkbox_grph" class="checkbox-custom" type="checkbox" name = "isJavaScriptRendered" [checked]="isJavaScriptRendered" [(ngModel)] = "isJavaScriptRendered" [ngModelOptions]="{standalone: true}">
@@ -695,7 +695,7 @@
                       <label for="checkbox_cook" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">Use Cookies</label>
                     </div>
                   </div>
-                  <div class="col-1"></div>
+                  <!-- <div class="col-1"></div> -->
                   <div class="inner-content row m-0 col-11 p-0">
                     <div class="col-3 p-0">                   
                       <div class="kr-sg-input-text mb-4">
@@ -712,7 +712,7 @@
                           [(ngModel)]="crawlDepth" class="input-text" >
                       </div>
                     </div>
-                    <div class="col-1 p-0"></div>
+                    <!-- <div class="col-1 p-0"></div> -->
                     <div class="col-3 p-0"> 
                       <div class="kr-sg-input-text mb-4">
                         <div class="label-text">Max URL Limit 
@@ -729,7 +729,7 @@
                       </div>
                     </div>
                   </div>  
-                  <div class="col-1"></div>
+                  <!-- <div class="col-1"></div> -->
                   <div class="info-no-limit col-7">
                     <img src="assets/icons/info-limit.svg">
                     <span class="title">Not limiting the Crawl Depth and Max URL Limit may impact the system performance</span>
