--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -943,9 +943,9 @@
             </div>
 
           </div>
-          <div class="empty-page-data-container">
+          <div class="empty-page-data-container" *ngIf="sourceStatus == 'failed'">
             <img src="assets\images\emptyList.svg">
-            <div class="title">Sorry! No Pages available yet!! Please <span>crawl</span> the web domain again</div>
+            <div class="title">Sorry! No Pages available yet!! Please <span> crawl</span> the web domain again</div>
           </div>
           <!-- Execution -->
           <div *ngIf="execution" class="execution-table-data">
@@ -954,10 +954,10 @@
                 <div class="kr-sg-data-table with-checkbox">
                   <section class="table-content m-0">
                     <header class="table-header">
-                      <div class="col_ col-4">EXECUTION STATUS</div>
-                      <div class="col_ col-2">DURATION</div>
-                      <div class="col_ col-3">TRIGGERED BY</div>
-                      <div class="col_ col-3">EXECUTED ON</div>
+                      <div class="col_ col-4">{{"contentSource.execution_caps" | translate}}</div>
+                      <div class="col_ col-2">{{"contentSource.duration_caps" | translate}}</div>
+                      <div class="col_ col-3">{{"contentSource.triggered_by_caps" | translate}}</div>
+                      <div class="col_ col-3">{{"contentSource.executed_on_caps" | translate}}</div>
                     </header>
                     <perfect-scrollbar class="scroll-table" #perfectScroll>
                       <ng-container>
@@ -966,7 +966,7 @@
                             <img src="assets/icons/content/eye.svg" (mouseover)="executionLogStatus = true">
                             <div class="execute-log" *ngIf="executionLogStatus">
                               <div class="header-title">
-                                <div class="title">EXECUTION LOG</div>
+                                <div class="title">{{"contentSource.execution_log_caps" | translate}}</div>
                             <div class="close-log"><img src="assets/images/close.svg" (click)="executionLogStatus = false"></div>
                               </div>
                               <ng-container *ngFor="let statlog of history.executionStats.statusLogs; let i = index;">
