--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -1453,7 +1453,7 @@
 
         .empty-page-data-container{
             width: 240px;
-            margin: 0 auto;
+            margin: 75px auto;
             text-align: center;
             .title{
                 font-weight: normal;
