content source ui issue fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -712,7 +712,7 @@
                           [(ngModel)]="crawlDepth" class="input-text" >
                       </div>
                     </div>
-                    <!-- <div class="col-1 p-0"></div> -->
+                    <div class="col-1 p-0"></div>
                     <div class="col-3 p-0"> 
                       <div class="kr-sg-input-text mb-4">
                         <div class="label-text">Max URL Limit 
