--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -859,7 +859,7 @@
             <!-- Conf Configuration-->
 
           </div>
-          <div class="accordion-content-info text-left d-none" *ngIf="page && sourceStatus == 'success'">
+          <div class="accordion-content-info text-left" *ngIf="page && sourceStatus == 'success'">
             <div class="header-sec row m-0">
               <div class="col-8 label_text m-0 p-0">Pages</div>
               <div class="col-3 label_text m-0">Last Updated <img src="assets/icons/caretDown.svg" class="ml-1"></div>
@@ -943,7 +943,7 @@
             </div>
 
           </div>
-          <div class="empty-page-data-container" *ngIf="sourceStatus == 'failed'">
+          <div class="empty-page-data-container" *ngIf="page && sourceStatus == 'failed' ">
             <img src="assets\images\emptyList.svg">
             <div class="title">Sorry! No Pages available yet!! Please <span> crawl</span> the web domain again</div>
           </div>
