--- a/findly-builder/src/app/components/scheduler/scheduler.component.scss
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.scss
@@ -125,7 +125,7 @@
     width: 100%;
     height: 100%;
     left: 0;
-    top:0px;
+    top:0;
     z-index: -1;
 }
 ::ng-deep perfect-scrollbar .ps--active-y{
