--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -51,7 +51,7 @@
             <div class="bot-name-sec">
               Bot Name: <span class="bot-name-title">{{linkedBotName}}</span>
                <span>
-                <a href="{{botBulilderUrl}}"> <img src="assets/icons/actions/external-link.svg" class="pl-2"></a>
+                <a href="{{botBulilderUrl}}" target="_blank"> <img src="assets/icons/actions/external-link.svg" class="pl-2"></a>
               </span>
             </div>
             <div class="bot-desc">{{linkedBotDescription}}</div>
@@ -82,7 +82,7 @@
           <span class="">The App can interact with the linked bot only after the Webhook channel is published</span>
         </div>
         <div class="ext_link">
-          <a href="{{botBulilderUrl}}">
+          <a href="{{botBulilderUrl}}" target="_blank">
           <img src="assets/icons/actions/external-link.svg">Go to Platform
           </a>
         </div>
